[gd_scene load_steps=16 format=2]

[ext_resource path="res://ArenaEnergia/EnergiaMinigame/backgroundEnergyShdwBIG.png" type="Texture" id=1]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/SolarPanel_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/SolarFrame_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/MinigameEnergia.gd" type="Script" id=4]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/energyBar_1.png" type="Texture" id=5]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/energyBar_5.png" type="Texture" id=6]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/energyBar_2.png" type="Texture" id=7]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/energyBar_3.png" type="Texture" id=8]
[ext_resource path="res://ArenaEnergia/EnergiaMinigame/energyBar_4.png" type="Texture" id=9]
[ext_resource path="res://MinigameSuccess/SuccessPanel.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "bar1"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "bar2"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "bar3"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "bar4"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "bar5"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1 ]
}

[node name="MinigameEnergia" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="SolarFrame_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 189.505, 346.482 )

[node name="SolarFrame_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 507.703, 149.907 )

[node name="SolarFrame_3" parent="." instance=ExtResource( 3 )]
position = Vector2( 820.244, 349.311 )

[node name="SolarFrame_4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1124.3, 171.12 )

[node name="SolarPanel_1" parent="." instance=ExtResource( 2 )]
position = Vector2( 504.874, 579.827 )

[node name="SolarPanel_2" parent="." instance=ExtResource( 2 )]
position = Vector2( 704.278, 629.325 )

[node name="SolarPanel_3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1115.81, 593.97 )

[node name="SolarPanel_4" parent="." instance=ExtResource( 2 )]
position = Vector2( 801.859, 142.836 )

[node name="EnergyBar_1" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnergyBar_1"]
anims/bar1 = SubResource( 1 )

[node name="EnergyBar_2" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnergyBar_2"]
anims/bar2 = SubResource( 2 )

[node name="EnergyBar_3" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnergyBar_3"]
anims/bar3 = SubResource( 3 )

[node name="EnergyBar_4" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnergyBar_4"]
anims/bar4 = SubResource( 4 )

[node name="EnergyBar_5" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnergyBar_5"]
anims/bar5 = SubResource( 5 )

[node name="SuccessPanel" parent="." instance=ExtResource( 11 )]
